[project]
name = "inalabapi"
version = "0.1.0"
description = "API não oficial para acesso aos dados do Diário Oficial da União (DOU)"
authors = [
    {name = "Gabriel Ramos", email = "gabrielgfcramos@outlook.com"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.3",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.2",
    "python-dateutil>=2.8.2",
    "cachetools>=5.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
